# financial_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/samples/: bofa_sample.csv  chase_sample.csv  generic_sample.json
src/fin_flow/: __init__.py  advisor_cli.py  pipeline.py
src/fin_flow/agents/: __init__.py  advisor.py  categorizer.py  forecaster.py
src/fin_flow/dashboard/: app.py
src/fin_flow/ingestion/: __init__.py  cli.py  dedupe.py  normalizer.py  schema.py
src/fin_flow/storage/: __init__.py  embeddings.py  vector_store.py
src/fin_flow/utils/: __init__.py  pii.py
tests/: conftest.py  test_advisor.py  test_advisor_cli.py  test_categorizer.py  test_cli.py  test_dedupe.py  test_embeddings.py  test_forecaster.py  test_normalizer.py  test_pii.py  test_pipeline.py  test_vector_store.py
