[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-flow"
version = "0.1.0"
description = "Fin-Flow Agent — autonomous CFO-AI for small businesses"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
